--- a/recetario/recetas/templates/recetas/editar_receta.html
+++ b/recetario/recetas/templates/recetas/editar_receta.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Editar {{ receta.titulo }}</title>
-</head>
-<body>
+{% extends 'recetas/base.html' %}
+
+{% block title %}Crear Nueva Receta{% endblock %}
+
+{% block content %}
     <h1>Editar Receta</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -11,5 +10,4 @@
         <button type="submit">Guardar cambios</button>
     </form>
     <p><a href="{% url 'detalle_receta' receta.id %}">← Volver al detalle</a></p>
-</body>
-</html>
+    {% endblock %}
