--- a/recetario/recetas/templates/recetas/eliminar_receta.html
+++ b/recetario/recetas/templates/recetas/eliminar_receta.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Eliminar {{ receta.titulo }}</title>
-</head>
-<body>
+{% extends 'recetas/base.html' %}
+
+{% block title %}Crear Nueva Receta{% endblock %}
+
+{% block content %}
     <h1>¿Estás seguro que deseas eliminar esta receta?</h1>
     <p><strong>{{ receta.titulo }}</strong></p>
     <form method="POST">
@@ -11,5 +10,4 @@
         <button type="submit">Sí, eliminar</button>
         <a href="{% url 'detalle_receta' receta.id %}">Cancelar</a>
     </form>
-</body>
-</html>
+    {% endblock %}
